do not publish test projects

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,9 @@ steps:
   displayName: 'Publish the project - $(buildConfiguration)'
   inputs:
     command: 'publish'
-    projects: '**/*.csproj'
+    projects: |
+      **/*.csproj
+      !**/*.Tests.csproj
     publishWebProjects: false
     arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
